--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Cash Register</title>
 </head>
 <body>
-    <Div class="container">
+    <div class="container">
         <h1 class="heading">
             Cash Register Manager
         </h1>
@@ -17,10 +17,10 @@
         </p>
         <label for="bill-amount">Bill Amount:</label>
         <input id="bill-amount" type="text" />
-        <button>Next</button>
+        <!-- <button>Next</button> -->
         <label for="cash-given">Cash Given:</label>
-        <input id="cash-given" type="text">
-        <button>Check</button>
+        <input id="cash-given" type="text" />
+        <button id="check-button">Check</button>
         <table class="change-table">
             <caption>Return Change</caption>
             <tr>
@@ -38,7 +38,7 @@
                 <td>1</td>
             </tr>
         </table>
-    </Div>
+    </div>
     
 </body>
 <script src="./index.js"></script>
